--- a/app/globals.css
+++ b/app/globals.css
@@ -18,11 +18,16 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  padding: 1rem;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@layer base {
+  h1 {
+    @apply font-extrabold text-2xl mb-3;
   }
 }
